--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Meredith Meyer
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/31709123?s=400&u=b8a80e4dbf9a4af5ed7a81f8822e8baaf2a79456&v=4
 
 #
 # Flags below are optional
