--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: meredith_meyer@berkeley.edu
   facebook:
   flickr:
-  github: https://github.com/mmeyer95
+  github: mmeyer95
   instagram:
-  linkedin: https://www.linkedin.com/in/meredithmeyer421/
+  linkedin: meredithmeyer421/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
